<resources>
    <string name="app_name">LearningSpace</string>
    <string name="flash_cards">Flash Cards</string>
    <string name="add_flash_card">Add Flash Card</string>
    <string name="edit_flash_card">Edit Flash Card</string>
    <string name="review_flash_card">Flash Card</string>
    <string name="question_label">Question</string>
    <string name="answer_label">Answer</string>
    <string name="show_answer">Show Answer</string>
    <string name="question_hint">Question</string>
    <string name="answer_hint">Answer</string>
    <string name="save">Save</string>
    <string name="study_cards">Study</string>
    <string name="rating_failed">Failed</string>
    <string name="rating_hard">Hard</string>
    <string name="rating_good">Good</string>
    <string name="rating_easy">Easy</string>
    <string name="rating_failed_interval">Failed\n%1$s</string>
    <string name="rating_hard_interval">Hard\n%1$s</string>
    <string name="rating_good_interval">Good\n%1$s</string>
    <string name="rating_easy_interval">Easy\n%1$s</string>
    <string name="interval_days">%1$dd</string>
    <string name="study_cards_count">Study (%1$d)</string>
    <string name="review_progress">%1$d / %2$d</string>
    <string name="session_complete_message">Session complete!\n%1$d cards reviewed.</string>
    <string name="no_cards_due">No cards due for review!</string>
    <string name="delete_flash_card">Delete flash card</string>
    <string name="card_deleted">Card deleted</string>
    <string name="undo">Undo</string>
    <string name="decks">Decks</string>
    <string name="add_deck">Add Deck</string>
    <string name="deck_name_label">Deck Name</string>
    <string name="edit_deck">Edit Deck</string>
    <string name="deck_deleted">Deck deleted</string>
    <string name="delete_deck">Delete deck</string>
    <string name="card_count">%1$d cards</string>
</resources>
