<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/deckListFragment">

    <fragment
        android:id="@+id/deckListFragment"
        android:name="com.example.learningspace.ui.DeckListFragment"
        android:label="@string/decks"
        tools:layout="@layout/fragment_deck_list">
        <action
            android:id="@+id/action_deck_list_to_deck_edit"
            app:destination="@id/deckEditFragment" />
        <action
            android:id="@+id/action_deck_list_to_card_list"
            app:destination="@id/flashCardListFragment" />
    </fragment>

    <fragment
        android:id="@+id/deckEditFragment"
        android:name="com.example.learningspace.ui.DeckEditFragment"
        android:label="@string/edit_deck"
        tools:layout="@layout/fragment_deck_edit">
        <argument
            android:name="deckId"
            android:defaultValue="-1"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/flashCardListFragment"
        android:name="com.example.learningspace.ui.FlashCardListFragment"
        android:label="@string/flash_cards"
        tools:layout="@layout/fragment_flash_card_list">
        <argument
            android:name="deckId"
            app:argType="integer" />
        <argument
            android:name="deckName"
            app:argType="string" />
        <action
            android:id="@+id/action_list_to_review"
            app:destination="@id/flashCardReviewFragment" />
        <action
            android:id="@+id/action_list_to_edit"
            app:destination="@id/flashCardEditFragment" />
        <action
            android:id="@+id/action_list_to_study"
            app:destination="@id/spacedRepetitionFragment" />
    </fragment>

    <fragment
        android:id="@+id/flashCardReviewFragment"
        android:name="com.example.learningspace.ui.FlashCardReviewFragment"
        android:label="@string/review_flash_card"
        tools:layout="@layout/fragment_flash_card_review">
        <argument
            android:name="cardId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/flashCardEditFragment"
        android:name="com.example.learningspace.ui.FlashCardEditFragment"
        android:label="@string/edit_flash_card"
        tools:layout="@layout/fragment_flash_card_edit">
        <argument
            android:name="cardId"
            android:defaultValue="-1"
            app:argType="integer" />
        <argument
            android:name="deckId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/spacedRepetitionFragment"
        android:name="com.example.learningspace.ui.SpacedRepetitionFragment"
        android:label="@string/study_cards"
        tools:layout="@layout/fragment_spaced_repetition">
        <argument
            android:name="deckId"
            app:argType="integer" />
    </fragment>

</navigation>
